refactor: apply dependency injection using Spring IoC